# jamak-ouroboros

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  agent-harness.yaml  pyproject.toml  railway.json
.agents/skills/glossary-review/: SKILL.md
.agents/skills/jamak-eval/: SKILL.md
.agents/skills/jamak-run/: SKILL.md
.agents/skills/seed-import/: SKILL.md
.claude/: launch.json  settings.json
.claude/skills/glossary-review/: SKILL.md
.claude/skills/jamak-run/: SKILL.md
data/corpus/: README.md
data/seeds/: 기존 검수 완료본.txt
deploy/: backup-cloud.cmd  restart-serve.cmd  start-serve.cmd  start-tunnel.cmd
docs/: glossary.md  hanja-lexicon.md  heo-policies-reference.md
docs/agent/: CHANGELOG_AGENT.md  CONSTITUTION.md  CURRENT_STATE.md  DECISION_INDEX.md  DEFINITION_OF_DONE.md  HARNESS_MIGRATION.md  PROJECT_MAP.md  RISK_PROFILE.md  deployment.md
docs/agent/decisions/: ADR-0001-pipeline-architecture.md  ADR-0002-db-as-source-of-truth.md  (+14 more)
docs/tutorial/: MAPPING.md  PLAN.md  README.md  재설계계획-2026-07.md
scripts/: deploy.ps1  doc-drift-check.ps1  export_glossary.py  export_hanja_lexicon.py  install-worker-autostart.ps1  jamak-worker-autostart.vbs  run-worker-hidden.vbs  run-worker.ps1
scripts/agent-harness/: verify_harness.py
src/jamak/: __init__.py  cli.py  config.py  db.py  evaluate.py  feedback.py  glossary.py  glossary_mine.py  learned_pairs.py  practice.py  seed.py  training.py
src/jamak/web/: app.py
tools/tutorial-video/: .gitignore  audio.py  build.py  package-lock.json  package.json  parse_scripts.py  tsconfig.json  tts.py
(+60 files in other folders)
